// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Replaces single variable in linear-gradient 1`] = `
.c0 {
  background: linear-gradient(red 0%,darken(red,5%) 100%);
}

<div
  className="c0"
/>
`;

exports[`Takes the color from props 1`] = `
.c0 {
  background-color: chocolate;
  color: red;
}

<div
  className="c0"
/>
`;
